--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 		"react": "^18.2.0",
 		"react-code-blocks": "^0.0.9-0",
 		"react-dom": "^18.2.0",
+		"react-particles": "^2.3.3",
 		"react-scripts": "5.0.1",
 		"semantic-ui-css": "^2.5.0",
 		"semantic-ui-react": "^2.1.3",
+		"tsparticles": "^2.3.4",
 		"typescript": "^4.8.4",
 		"web-vitals": "^2.1.4"
 	},
